external-dns/network-policy.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "external-dns"
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-dns
      app.kubernetes.io/name: external-dns
  egress:
    - toFQDNs:
        - matchPattern: "*.amazonaws.com"
        - matchPattern: "sts.*.amazonaws.com"
        - matchPattern: "route53.amazonaws.com"
